tests/e2e/negative/redeclaration/input.ei
int f() {}
uint f() {}
char f() {}

int main() {
    return f();
}
